--- a/examples/video/instream/jwplayer/pb-ve-jwplayer-hosted.html
+++ b/examples/video/instream/jwplayer/pb-ve-jwplayer-hosted.html
@@ -36,17 +36,17 @@ sidebarType: 4
 		<div>
 			<h4>Place this code in the page header.</h4>
 <pre class="pb-code-hl">
-	<!--put javascript code here-->
-	&lt;script async src="//acdn.adnxs.com/prebid/not-for-prod/1/prebid.js"&gt;&lt;/script&gt;
+<!--put javascript code here-->
+&lt;script async src="//acdn.adnxs.com/prebid/not-for-prod/1/prebid.js"&gt;&lt;/script&gt;
 &lt;script type="text/javascript" src="http://ssl.p.jwpcdn.com/player/v/7.2.4/jwplayer.js"&gt;&lt;/script&gt;
 &lt;script type="text/javascript"&gt;
-	jwplayer.key = "YEUwUA9wRFeDcydr"; //Test Key - replace this with your own valid JWPlayer license key
+	jwplayer.key = "YEUwUA9wRFeDcydr"; //Test Key - replace this with your own valid JWPlayer license key<br>
 &lt;/script&gt;
 &lt;script&gt;
 	var pbjs = pbjs || {};
 	pbjs.que = pbjs.que || [];
 	
-	// define invokeVideoPlayer in advance in case we get the bids back from prebid before the entire page loads
+	// define invokeVideoPlayer in advance in case we get the bids back from prebid before the entire page loads<br>
 	var tempTag = false;
 	var invokeVideoPlayer = function(url) {
 	    tempTag = url;
@@ -63,7 +63,7 @@ sidebarType: 4
 	    bids: [{
 	        bidder: 'appnexus',
 	        params: {
-	            placementId: 13232361, // Add your own placement id here
+	            placementId: 13232361, // Add your own placement id here<br>
 	            video: {
 	                skipppable: true,
 	                playback_method: ['auto_play_sound_off']
@@ -73,7 +73,7 @@ sidebarType: 4
 	};
 	
 	pbjs.que.push(function() {
-	    pbjs.addAdUnits(videoAdUnit); // add your ad units to the bid request
+	    pbjs.addAdUnits(videoAdUnit); // add your ad units to the bid request<br>
 	    pbjs.setConfig({
 	        debug: true,
 	        cache: {
@@ -108,8 +108,8 @@ sidebarType: 4
 		<div>
 			<h4>Place this code in the page body.</h4>
 <pre class="pb-code-hl">
-	<!--put body html and javascript here-->
-	&lt;!--player div--&gt;
+<!--put body html and javascript here-->
+&lt;!--player div--&gt;
 &lt;div id="playerContainerJW" style='width:640px; height:480px; border:1px solid black;'&gt;&lt;/div&gt;
 &lt;script&gt;
 	var jwPlayerInstance = jwplayer("playerContainerJW");
