Fixing typos per Jean's review

--- a/examples/video/instream/flowplayer/pb-ve-flowplayer.html
+++ b/examples/video/instream/flowplayer/pb-ve-flowplayer.html
@@ -1,7 +1,7 @@
 ---
 layout: video_sample
-title: Prebid Video | Instream Example with  FlowPlayer 
-description: An example of an instream pre-roll ad using Prebid.js and FlowPlayer.  
+title: Prebid Video | Instream Example with  Flowplayer 
+description: An example of an instream pre-roll ad using Prebid.js and Flowplayer.  
 videoType: pb-is-fp
 isVideo: true
 sidebarType: 4
