--- a/examples/video/pb-ve-test.html
+++ b/examples/video/pb-ve-test.html
@@ -151,10 +151,11 @@ sidebarType: 4
 	
 	    invokeVideoPlayer = function(url) {
 	        jwPlayerInstance.setup({
-	            "file": "http://localhost:8080/examples/video/instream/jwplayer/pb-ve-jwplayer-hosted.html",
+	            "file": "http://localhost:8080//examples/video/instream/sample_vid/agent327_trailer.mp4",
 	            "width": 640,
 	            "height": 480,
 	            "autostart": true,
+	            "type":"mp4",
 	            "mute": true,
 	            "advertising": {
 	                client: "vast",
