--- a/examples/video/server/jwplayer/pbs-ve-jwplayer-hosted.html
+++ b/examples/video/server/jwplayer/pbs-ve-jwplayer-hosted.html
@@ -185,7 +185,7 @@ sidebarType: 4
         invokeVideoPlayer = function(url) {
             console.log("starting player with url " + url);
             jwPlayerInstance.setup({
-                "file": "http://video-demo.appnexus.com/pbjs/JWPlayerDemo/AppNexus_Summit_Video_HighRes.mp4",
+                "file": "http://mirrors.standaloneinstaller.com/video-sample/jellyfish-25-mbps-hd-hevc.mp4",
                 "width": 640,
                 "height": 480,
                 "autostart": true,
