change video on jw player platform instream

--- a/examples/video/instream/jwplayer/pb-ve-jwplayer-hosted.html
+++ b/examples/video/instream/jwplayer/pb-ve-jwplayer-hosted.html
@@ -116,7 +116,7 @@ sidebarType: 4
 	
 	invokeVideoPlayer = function(url) {
 	    jwPlayerInstance.setup({
-	        "file": "http://video-demo.appnexus.com/pbjs/JWPlayerDemo/AppNexus_Summit_Video_HighRes.mp4",
+	        "file": "http://mirrors.standaloneinstaller.com/video-sample/jellyfish-25-mbps-hd-hevc.mp4",
 	        "width": 640,
 	        "height": 480,
 	        "autostart": true,
@@ -151,7 +151,7 @@ sidebarType: 4
 	
 	    invokeVideoPlayer = function(url) {
 	        jwPlayerInstance.setup({
-	            "file": "http://video-demo.appnexus.com/pbjs/JWPlayerDemo/AppNexus_Summit_Video_HighRes.mp4",
+	            "file": "http://mirrors.standaloneinstaller.com/video-sample/jellyfish-25-mbps-hd-hevc.mp4",
 	            "width": 640,
 	            "height": 480,
 	            "autostart": true,
