turned on audio for video

--- a/examples/video/instream/jwplayer/pb-ve-jwplayer-hosted.html
+++ b/examples/video/instream/jwplayer/pb-ve-jwplayer-hosted.html
@@ -120,7 +120,7 @@ sidebarType: 4
 	        "width": 640,
 	        "height": 480,
 	        "autostart": true,
-	        "mute": true,
+	        "mute": false,
 	        "advertising": {
 	            client: "vast",
 	        }
