Commented out flowplayer's ad toggle as it was not working.

--- a/examples/video/instream/flowplayer/pb-ve-flowplayer.html
+++ b/examples/video/instream/flowplayer/pb-ve-flowplayer.html
@@ -22,7 +22,7 @@ sidebarType: 4
 		</div>
 		
 		<!--video placeholder | this should be formatted per the needs of each player-->
-		<div>
+		<!--<div>
 			
 			<div id="player"></div>
 			<div id="controls">
@@ -32,7 +32,7 @@ sidebarType: 4
 			    <p>The button will be enabled only during ads</p>
 			</div>
 			
-		</div>
+		</div>-->
 		
 	</div>
 	
