Added missing javascript for long form video

--- a/examples/video/long-form/pb-ve-lf-freewheel.html
+++ b/examples/video/long-form/pb-ve-lf-freewheel.html
@@ -2,7 +2,7 @@
 layout: video_sample
 title: Prebid Video | Long-Form Ad Pod Example with Freewheel 
 description: An example of ad pod insertions using Prebid.js and Freewheel.  
-videoType: pb-ve-lf-fw
+videoType: pb-lf-fw
 isVideo: true
 sidebarType: 4
 ---
