--- a/examples/video/server/videojs/pbs-ve-videojs.html
+++ b/examples/video/server/videojs/pbs-ve-videojs.html
@@ -11,12 +11,13 @@ sidebarType: 4
 
 <div class="container">
 	<div class="row">
-		<h1>{{ page.title }}</h1>
-		<p>{{page.description }}</p>
+		<div class="vidHeader" style="width:75vw;">
+			<h1>{{ page.title }}</h1>
+			<p>{{page.description }}</p>
+		</div>
 		
 		<!--video warning-->
-		<div markdown="span" class="pb-alert pb-alert-important" role="alert">
-			<i class="fa fa-exclamation-circle"></i>
+		<div class="pb-alert pb-alert-important" style="width:60vw;">
 			<p style="color:#85720f"><b>Important:</b>
 			This example uses a test version of Prebid.js hosted on our CDN that is not recommended for production use. It includes all available adapters. Production implementations should build from source or customize the build using the Download page to make sure only the necessary bidder adapters are included.</p>
 		</div>
@@ -34,8 +35,7 @@ sidebarType: 4
 		<!--video code fencing-->
 					
 		<!--header code example-->
-		<div markdown="span" class="pb-alert pb-alert-warning" role="alert">
-			<i class="fa fa-exclamation-circle"></i>
+		<div class="pb-alert pb-alert-warning" style="width:60vw;">
 			<p style="color:#a94443"><b>Warning:</b>
 			Do not forget to exchange the placementId in the code examples with your own placementId!</p>
 		</div>
