Fixed responsiveness of code blocks

--- a/examples/video/instream/kaltura/pb-ve-kaltura.html
+++ b/examples/video/instream/kaltura/pb-ve-kaltura.html
@@ -33,9 +33,9 @@ sidebarType: 4
 			Do not forget to exchange the placementId in the code examples with your own placementId!</p>
 		</div>
 		
-		<div>
+		<div style="width:60vw;">
 			<h4>Place this code in the page header.</h4>
-<pre class="pb-code-hl">
+<pre class="pb-code-hl" style="width:60vw;">
 <!--put javascript code here-->
 &lt;script&gt;
     var pbjs = pbjs || {};
@@ -115,9 +115,9 @@ sidebarType: 4
 		</div>
 					
 		<!--body code example-->
-		<div>
+		<div style="width:60vw;">
 			<h4>Place this code in the page body.</h4>
-<pre class="pb-code-hl">
+<pre class="pb-code-hl" style="width:60vw;">
 <!--put body html and javascript here-->
 &lt;div id="myPlayer" style="width:640px; height:480px;"&gt;&lt;/div&gt;
 &lt;!-- INCLUDE KALTURA PLAYER SCRIPT
