--- a/examples/video/instream/brightcove/pb-ve-brightcove.html
+++ b/examples/video/instream/brightcove/pb-ve-brightcove.html
@@ -35,9 +35,9 @@ sidebarType: 4
 			Do not forget to exchange the placementId in the code examples with your own placementId!</p>
 		</div>
 		
-		<div>
+		<div style="width:60vw;">
 			<h4>Place this code in the page header.</h4>
-<pre class="pb-code-hl">
+<pre class="pb-code-hl" style="width:60vw;">
 <!--put javascript code here-->
 &lt;!--brightcove & prebid js code--&gt;
 &lt;script&gt;
@@ -117,9 +117,9 @@ sidebarType: 4
 		</div>
 					
 		<!--body code example-->
-		<div>
+		<div style="width:60vw;">
 			<h4>Place this code in the page body.</h4>
-<pre class="pb-code-hl">
+<pre class="pb-code-hl" style="width:60vw;">
 <!--put body html and javascript here-->
 &lt;!-- INCLUDE PLAYER AND IMA3 PLUGIN SCRIPTS
 
