--- a/examples/video/instream/flowplayer/pb-ve-flowplayer.html
+++ b/examples/video/instream/flowplayer/pb-ve-flowplayer.html
@@ -48,9 +48,9 @@ sidebarType: 4
 			Do not forget to exchange the placementId in the code examples with your own placementId!</p>
 		</div>
 		
-		<div>
+		<div style="width:60vw;">
 			<h4>Place this code in the page header.</h4>
-<pre class="pb-code-hl">
+<pre class="pb-code-hl" style="width:60vw;">
 <!--put javascript code here-->
 &lt;script async src="//acdn.adnxs.com/prebid/not-for-prod/1/prebid.js"&gt;&lt;/script&gt;
 &lt;link rel="stylesheet" href="//cdn.flowplayer.com/releases/native/stable/style/flowplayer.css"&gt;
@@ -148,9 +148,9 @@ sidebarType: 4
 		</div>
 					
 		<!--body code example-->
-		<div>
+		<div style="width:60vw;">
 			<h4>Place this code in the page body.</h4>
-<pre class="pb-code-hl">
+<pre class="pb-code-hl" style="width:60vw;">
 <!--put body html and javascript here-->
 &lt;div id="player"&gt;&lt;/div&gt;
 &lt;!--video player div--&gt;
