--- a/examples/video/instream/jwplayer/pb-ve-jwplayer-platform.html
+++ b/examples/video/instream/jwplayer/pb-ve-jwplayer-platform.html
@@ -34,9 +34,9 @@ sidebarType: 4
 			Do not forget to exchange the placementId in the code examples with your own placementId!</p>
 		</div>
 		
-		<div>
+		<div style="width:60vw;">
 			<h4>Place this code in the page header.</h4>
-<pre class="pb-code-hl">
+<pre class="pb-code-hl" style="width:60vw;">
 <!--put javascript code here-->
 &lt;!--Prebid.js and video player code--&gt;
 &lt;script async src="//acdn.adnxs.com/prebid/not-for-prod/1/prebid.js"&gt;&lt;/script&gt;
@@ -105,9 +105,9 @@ sidebarType: 4
 		</div>
 					
 		<!--body code example-->
-		<div>
+		<div style="width:60vw;">
 			<h4>Place this code in the page body.</h4>
-<pre class="pb-code-hl">
+<pre class="pb-code-hl" style="width:60vw;">
   <!--put body html and javascript here-->
 &lt;div id="myElement1"&gt;&lt;/div&gt;
 
