--- a/examples/video/instream/ooyala/pb-ve-ooyala.html
+++ b/examples/video/instream/ooyala/pb-ve-ooyala.html
@@ -33,9 +33,11 @@ sidebarType: 4
 			Do not forget to exchange the placementId in the code examples with your own placementId!</p>
 		</div>
 		
-		<div>
+		<div style="width:60vw;">
 			<h4>Place this code in the page header.</h4>
-<pre class="pb-code-hl">
+		</div>
+		
+<pre class="pb-code-hl" style="width:60vw; display:block; overflow:normal; overflow-x:auto;"><code>
 <!--put javascript code here-->
 &lt;script async src="//acdn.adnxs.com/prebid/not-for-prod/1/prebid.js"&gt;&lt;/script&gt;
 &lt;!-- LOAD OOYALA PLUGINS
@@ -147,14 +149,13 @@ sidebarType: 4
 
 &lt;/script&gt;      
 
-</pre>
+</code></pre>
 
-		</div>
 					
 		<!--body code example-->
-		<div>
+		<div style="width:60vw;">
 			<h4>Place this code in the page body.</h4>
-<pre class="pb-code-hl">
+<pre class="pb-code-hl" style="width:60vw;">
 <!--put body html and javascript here-->
 &lt;script&gt;
     var invokeVideoPlayer = function(url) {
