--- a/examples/video/server/ooyala/pbs-ve-ooyala.html
+++ b/examples/video/server/ooyala/pbs-ve-ooyala.html
@@ -34,9 +34,9 @@ sidebarType: 4
 			Do not forget to exchange the placementId in the code examples with your own placementId!</p>
 		</div>
 		
-		<div>
+		<div style="width:60vw;">
 			<h4>Place this code in the page header.</h4>
-<pre class="pb-code-hl">
+<pre class="pb-code-hl" style="width:60vw;">
 	<!--put javascript code here-->
 	
 &lt;!-- LOAD OOYALA PLUGINS
@@ -164,9 +164,9 @@ sidebarType: 4
 		</div>
 					
 		<!--body code example-->
-		<div>
+		<div style="width:60vw;">
 			<h4>Place this code in the page body.</h4>
-<pre class="pb-code-hl">
+<pre class="pb-code-hl" style="width:60vw;">
 <!--put body html and javascript here-->
 &lt;div id='container' style='width:640px;height:480px;'&gt;&lt;/div&gt;
 
