--- a/examples/video/server/videojs/pbs-ve-videojs.html
+++ b/examples/video/server/videojs/pbs-ve-videojs.html
@@ -40,9 +40,9 @@ sidebarType: 4
 			Do not forget to exchange the placementId in the code examples with your own placementId!</p>
 		</div>
 		
-		<div>
+		<div style="width:60vw;">
 			<h4>Place this code in the page header.</h4>
-<pre class="pb-code-hl">
+<pre class="pb-code-hl" style="width:60vw;">
 <!--put javascript code here-->
 &lt;!-- videojs --&gt;
 &lt;!-- use recent version of videojs to ensure proper functioning with the iOS devices --&gt;
@@ -143,12 +143,13 @@ sidebarType: 4
 
 </pre>
 
+
 		</div>
 					
 		<!--body code example-->
-		<div>
+		<div style="width:60vw;">
 			<h4>Place this code in the page body.</h4>
-<pre class="pb-code-hl">
+<pre class="pb-code-hl" style="width:60vw;">
 <!--put body html and javascript here-->
 &lt;div class="example-video-container"&gt;
     &lt;video id="vid1" class="video-js vjs-default-skin vjs-big-play-centered" controls data-setup='{}' width='640' height='480'&gt;
