--- a/examples/video/server/jwplayer/pbs-ve-jwplayer-jwplayer7.html
+++ b/examples/video/server/jwplayer/pbs-ve-jwplayer-jwplayer7.html
@@ -144,7 +144,7 @@ sidebarType: 4
     invokeVideoPlayer = function(url) {
         console.log("starting player with url " + url);
         jwPlayerInstance.setup({
-            "file": "http://video-demo.appnexus.com/pbjs/JWPlayerDemo/AppNexus_Summit_Video_HighRes.mp4",
+            "file": "https://content.jwplatform.com/feeds/ae4tmw2D.json",
             "width": 640,
             "height": 480,
             "autostart": true,
@@ -178,7 +178,7 @@ sidebarType: 4
         invokeVideoPlayer = function(url) {
             console.log("starting player with url " + url);
             jwPlayerInstance.setup({
-                "file": "http://video-demo.appnexus.com/pbjs/JWPlayerDemo/AppNexus_Summit_Video_HighRes.mp4",
+                "file": "http://mirrors.standaloneinstaller.com/video-sample/jellyfish-25-mbps-hd-hevc.mp4",
                 "width": 640,
                 "height": 480,
                 "autostart": true,
