--- a/examples/video/crossplayer/jwplayer/pb-cp-jwplayer.html
+++ b/examples/video/crossplayer/jwplayer/pb-cp-jwplayer.html
@@ -52,7 +52,7 @@ var options = {
       {
         bidder: 'appnexus',
         params: {
-          placementId: '13232361', // Add your own placement id here
+          placementId: '13232361', // Add your own placement id here<br>
           video: {
             skipppable: true,
             playback_method: ['auto_play_sound_off']
