--- a/examples/video/crossplayer/videojs/pb-cp-videojs.html
+++ b/examples/video/crossplayer/videojs/pb-cp-videojs.html
@@ -63,7 +63,7 @@ sidebarType: 4
         {
           bidder: 'appnexus',
           params: {
-            placementId: '13232361', // Add your own placement id here
+            placementId: '13232361', // Add your own placement id here<br>
             video: {
               skipppable: true,
               playback_method: ['auto_play_sound_off']
