Pb crossplayer samples (#1686)
* Added cross player video examples

* Fixed highlighting

--- a/examples/video/crossplayer/flowplayer/pb-cp-flowplayer.html
+++ b/examples/video/crossplayer/flowplayer/pb-cp-flowplayer.html
@@ -84,8 +84,9 @@ sidebarType: 4
         {
           bidder: 'appnexus',
           params: {
-            placementId: '13232361', // Add your own placement id here
-            video: {
+
+            	placementId: '13232361', // Add your own placement id here <br>
+
               skipppable: true,
               playback_method: ['auto_play_sound_off']
             }
