Updated license and title per RMP support.

--- a/examples/video/instream/radiant/pb-ve-radiant.html
+++ b/examples/video/instream/radiant/pb-ve-radiant.html
@@ -1,7 +1,7 @@
 ---
 layout: video_sample
-title: Prebid Video | Instream Example with  Radiant player
-description: An example of an instream pre-roll ad using Prebid.js and Radiant player .
+title: Prebid Video | Instream Example with  Radiant Media Player
+description: An example of an instream pre-roll ad using Prebid.js and Radiant Media Player .
 videoType: pb-is-rd
 isVideo: true
 sidebarType: 4
@@ -147,7 +147,7 @@ sidebarType: 4
 				]
 			};
 			var settings = {
-				licenseKey: 'Kl8lbz16cz1rN2l2enM9Z2M9NnZvMnllaT9yb201ZGFzaXMzMGRiMEElXyo=',
+				licenseKey: 'Kl8lZ292K3N6MmVvZD9yb201ZGFzaXMzMGRiMEElXyo=',
 				src: src,
 				width: 640,
 				height: 360,
@@ -288,7 +288,7 @@ sidebarType: 4
 			    ]
 			  };
 			  var settings = {
-			    licenseKey: 'Kl8lbz16cz1rN2l2enM9Z2M9NnZvMnllaT9yb201ZGFzaXMzMGRiMEElXyo=',
+			    licenseKey: 'Kl8lZ292K3N6MmVvZD9yb201ZGFzaXMzMGRiMEElXyo=',
 			    src: src,
 			    width: 640,
 			    height: 360,
