--- a/examples/video/outstream/pb-ve-outstream-radiant.html
+++ b/examples/video/outstream/pb-ve-outstream-radiant.html
@@ -1,7 +1,7 @@
 ---
 layout: video_sample
-title: Prebid Video | Video Outstream Example with  Radiant Player
-description: An example of an outstream video with a pre-roll ad using Prebid.js and Radiant Player.
+title: Prebid Video | Video Outstream Example with  Radiant Media Player
+description: An example of an outstream video with a pre-roll ad using Prebid.js and Radiant Media Player.
 videoType: pb-os-rd
 isVideo: true
 sidebarType: 4
@@ -113,7 +113,7 @@ sidebarType: 4
 		              window.console.log(vastXml);
 		            }
 		            var settings = {
-		              licenseKey: 'Kl8lbz16cz1rN2l2enM9Z2M9NnZvMnllaT9yb201ZGFzaXMzMGRiMEElXyo=',
+		              licenseKey: 'Kl8lZ292K3N6MmVvZD9yb201ZGFzaXMzMGRiMEElXyo=',
 		              width: 640,
 		              height: 360,
 		              autoplay: true,
@@ -193,7 +193,7 @@ sidebarType: 4
 		              window.console.log(vastXml);
 		            }
 		            var settings = {
-		              licenseKey: 'Kl8lbz16cz1rN2l2enM9Z2M9NnZvMnllaT9yb201ZGFzaXMzMGRiMEElXyo=',
+		              licenseKey: 'Kl8lZ292K3N6MmVvZD9yb201ZGFzaXMzMGRiMEElXyo=',
 		              width: 640,
 		              height: 360,
 		              autoplay: true,
