--- a/examples/video/server/radiant/pbs-ve-radiant.html
+++ b/examples/video/server/radiant/pbs-ve-radiant.html
@@ -1,7 +1,7 @@
 ---
 layout: video_sample
-title: Prebid Video | Prebid Server Example with  Radiant player
-description: An example of an instream pre-roll ad using Prebid Server and Radiant player .
+title: Prebid Video | Prebid Server Example with  Radiant Media Player
+description: An example of an instream pre-roll ad using Prebid Server and Radiant Media Player .
 videoType: pbs-rd
 isVideo: true
 sidebarType: 4
@@ -158,7 +158,7 @@ pbApp.invokeVideoPlayer = function (adTagUrl) {
     ]
   };
   var settings = {
-    licenseKey: 'Kl8lbz16cz1rN2l2enM9Z2M9NnZvMnllaT9yb201ZGFzaXMzMGRiMEElXyo=',
+    licenseKey: 'Kl8lZ292K3N6MmVvZD9yb201ZGFzaXMzMGRiMEElXyo=',
     src: src,
     width: 640,
     height: 360,
