--- a/examples/video/crossplayer/flowplayer/pb-cp-flowplayer.html
+++ b/examples/video/crossplayer/flowplayer/pb-cp-flowplayer.html
@@ -19,7 +19,6 @@ sidebarType: 4
 		<!--video warning-->
 		<div class="pb-alert pb-alert-important" style="width:60vw;">
 			<p style="color:#85720f"><b>Important:</b>
-			<p style="color:#85720f"><b>Important:</b>
 			This example uses a test version of Prebid.js hosted on our CDN that is not recommended for production use. It includes all available adapters. Production implementations should build from source or customize the build using the Download page to make sure only the necessary bidder adapters are included.</p>
 		</div>
 
@@ -46,6 +45,8 @@ sidebarType: 4
 		<div class="pb-alert pb-alert-warning" style="width:60vw;">
 			<p style="color:#a94443"><b>Warning:</b>
 			Do not forget to exchange the placementId in the code examples with your own placementId!</p>
+			<p style="color:#a94443">
+			To allow the Cross-Player plugin to load your custom build of Prebid.js ensure that the option key `prebidPath` is set to the custom build's location. If `prebidPath` is not set, the plugin will point to `//acdn.adnxs.com/prebid/not-for-prod/1/prebid.js`.</p>
 		</div>
 
 		<div style="width:60vw;">
@@ -84,7 +85,7 @@ sidebarType: 4
         {
           bidder: 'appnexus',
           params: {
-            	placementId: '13232361', // Add your own placement id here <br>
+              placementId: '13232361', // Add your own placement id here <br>
               skipppable: true,
               playback_method: ['auto_play_sound_off']
             }
