add config site docs

--- a/sandbox/apiCatgories/configuration.html
+++ b/sandbox/apiCatgories/configuration.html
@@ -21,6 +21,7 @@
 					<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=priceGranularity">priceGranularity</a></li>
 					<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=publisherDomain">publisherDomain</a></li>
 					<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=s2sConfig">s2sConfig (server-to-server config)</a></li>
+					<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=site">site</a></li>
 					<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=sizeConfigAndLabels">sizeConfig and labels (responsive ads)</a></li>
 					<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=timeoutBuffer">timeoutBuffer</a></li>
 					<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=troubleshootingConfig">Troubleshooting your config</a></li>
